Fixed layout bugs, added title on every page, added raw data tab on detail view

--- a/src/theme/overwrite.scss
+++ b/src/theme/overwrite.scss
@@ -9,3 +9,7 @@
 .theme--dark.v-stepper {
   background: #1e1e1e;
 }
+
+.display-3 {
+  text-shadow: 0 0 5px #aabacd, 0 0 5px #aabacd, 0 0 5px #aabacd;
+}
